feat(user, auth): define User port (#26)
## **PR 타이틀**

- Squash 시 최종 커밋 제목이 되므로 **Conventional Commits** 권장
    
    예) PR 제목 (#PR번호), `feat: support refresh token rotation (#1234)`

##  Summary
- 무엇/왜 (한 줄 요약)

##  Related Issue
- Issue Number: #<이슈번호>
- (선택) Closes #<이슈번호>  ← 머지 시 자동 닫힘

##  Changes
- User의 port, Auth의 JwtPolicy 및 UserCase 정의
- api 문서 추가

##  Discussion Topic
- 더 추가 또는 수정할 것이 있을지..

##  Checklist
- [x] 로컬 테스트 완료
- [x] lint 통과(로컬)
- [x] 리뷰어 요청(최소 2명), 라벨/스코프 지정
- [x] 브랜치 최신화(rebase) 및 충돌 없음
