# auth/src/main/java/com/lxp/auth/presentation/rest/local/dto/reqeust/LoginRequest.java
@@ -1,0 +1,10 @@
+package com.lxp.auth.presentation.rest.local.dto.reqeust;
+
+import com.lxp.auth.application.local.port.required.command.HandleLoginCommand;
+
+public record LoginRequest(String email, String password) {
+
+    public HandleLoginCommand toCommand() {
+        return new HandleLoginCommand(this.email, this.password);
+    }
+}
