# auth/src/main/java/com/lxp/auth/presentation/rest/local/dto/response/LoginResponse.java
@@ -1,0 +1,4 @@
+package com.lxp.auth.presentation.rest.local.dto.response;
+
+public record LoginResponse(String accessToken, long expiresIn) {
+}
